Enable preview feature.